--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,7 +4,11 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -16,7 +20,7 @@ security:
             pattern: ^/api/login
             stateless: true
             json_login:
-                check_path: /api/login_check
+                check_path: /api/login
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
         api:
@@ -35,10 +39,10 @@ security:
     access_control:
          - { path: ^/api/user, roles: PUBLIC_ACCESS, methods: ['POST']}
          - { path: ^/api/login, roles: PUBLIC_ACCESS, methods: ['POST']}
-         - { path: ^/api/conseils, roles: IS_AUTHENTICATED_FULLY, methods: ['GET']}
-         - { path: ^/api/meteo, roles: IS_AUTHENTICATED_FULLY, methods: ['GET']}
+         - { path: ^/api/advices, roles: IS_AUTHENTICATED_FULLY, methods: ['GET']}
+         - { path: ^/api/weather, roles: IS_AUTHENTICATED_FULLY, methods: ['GET']}
          - { path: ^/api/user, roles: ROLE_ADMIN, methods: ['PUT', 'DELETE']}
-         - { path: ^/api/conseils, roles: ROLE_ADMIN, methods: ['POST','PUT', 'DELETE'] }
+         - { path: ^/api/advices, roles: ROLE_ADMIN, methods: ['POST','PUT', 'DELETE'] }
 
 when@test:
     security:
