--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,9 +15,9 @@ security:
             security: false
 #        main:
 #            lazy: true
-#            provider: users_in_memory
+#            provider: app_user_provider
         login:
-            pattern: ^/api/login
+            pattern: ^/api/login$
             stateless: true
             json_login:
                 check_path: /api/login
