--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,6 +37,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+         - { path: ^/api/login, roles: PUBLIC_ACCESS}
          - { path: ^/api/user, roles: PUBLIC_ACCESS, methods: ['POST']}
          - { path: ^/api/login, roles: PUBLIC_ACCESS, methods: ['POST']}
          - { path: ^/api/advices, roles: IS_AUTHENTICATED_FULLY, methods: ['GET']}
