--- a/.env
+++ b/.env
@@ -34,3 +34,7 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=PASSPHRASE
 ###< lexik/jwt-authentication-bundle ###
+
+###> API KEY OPEN WEATHER ###
+API_KEY_OPEN_WEATHER=API_KEY
+###< API KEY OPEN WEATHER ###
