--- a/.env
+++ b/.env
@@ -36,5 +36,5 @@ JWT_PASSPHRASE=PASSPHRASE
 ###< lexik/jwt-authentication-bundle ###
 
 ###> API KEY OPEN WEATHER ###
-API_KEY_OPEN_WEATHER=API_KEY
+# API_KEY_OPEN_WEATHER=API_KEY
 ###< API KEY OPEN WEATHER ###
