--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Controller\ExternalWeatherApiController:
+        arguments:
+            $apiKeyOpenWeather: '%env(API_KEY_OPEN_WEATHER)%'
